Fixed UI issues with scrollbar and pixel ratio scaling

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,26 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 html {
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  right: 0;
   touch-action: none;
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
 
 body {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  right: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
   background: 
   linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
   linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
@@ -24,6 +36,7 @@ h1 {
 
 p {
   font-size: 1.5em;
+  word-break: break-word;
 }
 
 button {
@@ -34,7 +47,11 @@ button {
 }
 
 .top-bar {
-  width: 100%;
+  position: fixed;
+  width: 100vw;
+  margin: 0;
+  right: 0;
+  overflow: hidden;
   background-color: rgba(64, 64, 64, 0.5);
   z-index: 2;
 }
@@ -46,8 +63,12 @@ button {
   font-family: fantasy;
 }
 
+#title-bar {
+  z-index: 3;
+}
+
 #title-bar > button {
-  position: absolute;
+  position: fixed;
   top: 1.25rem;
   left: 2rem;
   z-index: 999;
@@ -60,9 +81,7 @@ button {
 }
 
 #nav-bar {
-  /* position: -webkit-sticky;   
-  position: sticky; */
-  position: relative;
+  position: fixed;
   display: block;
   top: 0;
   line-height: 100%;
@@ -112,18 +131,20 @@ button {
 }
 
 .canvas-container {
-  position: absolute;
+  position: fixed;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
-.site-body {
-  position: absolute;
+.page {
+  position: fixed;
   display: none;
-  /* width: 100%; */
-  height: auto;
-  min-height: 100%;
+  width: 100vw;
+  top: 5rem;
+  bottom: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
   z-index: 1;
   background-color: rgba(255, 255, 255, 1);
   padding-top: 3em;
@@ -131,28 +152,10 @@ button {
   padding-right: 10em;
 }
 
-.site-body.fade{
-  display: block;
-  opacity: 0;
-  transition:opacity .3s linear;
-  -moz-transition:opacity .3s linear;
-  -webkit-transition:opacity .3s linear;
-}
-
-.site-body.active{
+.page.active{
   display: block;
   opacity: 1;
   transition:opacity .3s linear;
   -moz-transition:opacity .3s linear;
   -webkit-transition:opacity .3s linear;
 }
-
-/* #main {
-  position: relative;
-  display: inherit;
-  width: 75%;
-  height: 100%;
-  margin: 0 auto;
-  padding: 40px;
-  background-color: white;
-} */
